[tool.poetry]
name = "wikipage"
version = "0.1.0"
description = "simple wiki page"
authors = ["Junghoon Ban <junghoon.ban@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
sqlalchemy = "^2.0.23"
alembic = "^1.13.0"
pydantic-settings = "^2.1.0"
psycopg = {extras = ["binary"], version = "^3.1.14"}
tenacity = "^8.2.3"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]
